<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="xiaomidoze_display_title">Advanced settings</string>
	<string name="xiaomidoze_display_summary">Ambient display toggle, Pick up pulse, Hand wave pulse</string>
    <string name="ambient_display_title">Ambient display</string>

    <string name="ambient_display_notifications">New notifications</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>

    <!-- Tilt sensor -->
    <string name="tilt_sensor_title">Tilt sensor</string>
    <string name="pick_up_title">Lift to check phone</string>
    <string name="pick_up_summary">Pulse notifications when device is picked up</string>

    <!-- Proximity sensor -->
    <string name="priximity_sensor_title">Proximity sensor</string>
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    <string name="aod_setting_title">Always on</string>
    <string name="aod_setting_summary">Show time, notification icons and other info. Increased battery usage.</string>

    <string name="doze_brightness_title">Ambient brightness</string>
    <string name="doze_brightness_summary">Configure Ambient brightness values</string>
    <string name="night_brightness_value">Night brightness</string>
    <string name="low_brightness_value">Low light brightness</string>
    <string name="high_brightness_value">Medium light brightness</string>
    <string name="sun_brightness_value">Sun light brightness</string>

    <string name="reset_hidden_apps">Reset all</string>

    <string name="footer_info">If Always on is enabled, brightness gets recalculated to follow hardware specifications, so don\'t consider above values as absolute ones.\n\nLong press on the left text value to set it manually.</string>
</resources>
