<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The ABC rom

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.custom.ambient.display.preference.CustomSeekBarPreference
        android:key="night"
        android:title="@string/night_brightness_value"
        allowEditText="true"
        android:max="255"
        min="1" />

    <com.custom.ambient.display.preference.CustomSeekBarPreference
        android:key="low"
        android:title="@string/low_brightness_value"
        allowEditText="true"
        android:max="255"
        min="1" />

    <com.custom.ambient.display.preference.CustomSeekBarPreference
        android:key="high"
        android:title="@string/high_brightness_value"
        allowEditText="true"
        android:max="255"
        min="1" />

    <com.custom.ambient.display.preference.CustomSeekBarPreference
        android:key="sun"
        android:title="@string/sun_brightness_value"
        allowEditText="true"
        android:max="255"
        min="1" />

    <com.android.settingslib.widget.FooterPreference
            android:title="@string/footer_info" />

</PreferenceScreen>
